Fixed ng-particles layout issue

--- a/client/src/app/portfolio/header/header.component.scss
+++ b/client/src/app/portfolio/header/header.component.scss
@@ -34,3 +34,7 @@
 .desc {
   font-size: 20px;
 }
+
+.particles {
+  z-index: 100;
+}
