--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -10,4 +10,7 @@ body {
   justify-content: center;
 }
 
-// Pos
+.particles-container {
+  width: 100%;
+  height: 100%;
+}
